@@ -20,6 +20,7 @@ import static edu.colorado.phet.common.phetcommon.model.property.Property.proper
  */
 public class EthanolDropper extends Dispenser<MicroModel> {
     public Property<Boolean> pressing = property( false );
+    private double dropperHeight;
 
     public EthanolDropper( double x, double y, double angle, Beaker beaker, ObservableProperty<Boolean> moreAllowed, String name, double distanceScale, ObservableProperty<DispenserType> selectedType, final DispenserType type ) {
         super( x, y, angle, beaker, moreAllowed, name, distanceScale, selectedType, type );
@@ -28,8 +29,13 @@ public class EthanolDropper extends Dispenser<MicroModel> {
     //If the user is pressing the dropper, emit ethanol
     @Override public void updateModel( MicroModel model ) {
         if ( pressing.get() ) {
-            model.addEthanol( center.get() );
+            model.addEthanol( center.get().plus( 0, dropperHeight / 2 ) );
         }
+    }
+
+    //Sets the model value of the dropper height in meters so the drops can be placed at the end of the dropper
+    public void setDropperHeight( double dropperHeight ) {
+        this.dropperHeight = dropperHeight;
     }
 
     //Create the graphic for this model element
